syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AElf.Contracts.LotteryContract";

service LotteryContract {
    option (aelf.csharp_state) = "AElf.Contracts.LotteryContract.LotteryContractState";

    rpc Initialize (InitializeInput) returns (google.protobuf.Empty) {
    }
    rpc Buy (BuyInput) returns (google.protobuf.Empty) {
    }
    rpc Draw (google.protobuf.Int64Value) returns (google.protobuf.Empty) {
    }
    rpc PrepareDraw (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc TakeReward (TakeRewardInput) returns (google.protobuf.Empty) {
    }
    rpc SetBonusRate (google.protobuf.Int32Value) returns (google.protobuf.Empty) {
    }
    rpc SetAdmin (aelf.Address) returns (google.protobuf.Empty) {
    }

    //View
    rpc GetPeriods (GetPeriodsInput) returns (GetPeriodsOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetLottery (GetLotteryInput) returns (GetLotteryOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetLotteries (GetLotteriesInput) returns (GetLotteriesOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetRewardedLotteries (GetLotteriesInput) returns (GetLotteriesOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetLatestCashedLottery (google.protobuf.Empty) returns (GetLatestCashedLotteryOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetPeriod (google.protobuf.Int64Value) returns (PeriodDetail) {
        option (aelf.is_view) = true;
    }
    rpc GetLatestDrawPeriod (google.protobuf.Empty) returns (PeriodDetail) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentPeriodNumber (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetCurrentPeriod (google.protobuf.Empty) returns (PeriodDetail) {
        option (aelf.is_view) = true;
    }
    rpc GetPrice (google.protobuf.Empty) returns (google.protobuf.Int64Value) {
        option (aelf.is_view) = true;
    }
    rpc GetTokenSymbol (google.protobuf.Empty) returns (google.protobuf.StringValue) {
        option (aelf.is_view) = true;
    }    
    rpc GetCashDuration (google.protobuf.Empty) returns (google.protobuf.Int32Value) {
        option (aelf.is_view) = true;
    }
    rpc GetBonusRate (google.protobuf.Empty) returns (GetRateOutput) {
        option (aelf.is_view) = true;
    }
    rpc GetAdmin (google.protobuf.Empty) returns (aelf.Address) {
        option (aelf.is_view) = true;
    }
    rpc GetRewards (google.protobuf.Empty) returns (GetRewardsOutput) {
        option (aelf.is_view) = true;
    }
}

message InitializeInput {
    string token_symbol = 1;
    int64 price = 2;
    int32 bonus_rate = 3;
    int32 cash_duration = 4;
}

message BuyInput{
    int32 type = 1;
    repeated BetBody bet_infos = 2;
    aelf.Address seller = 3;
}

enum LotteryType{
    SIMPLE = 0;
    ONE_BIT = 10;
    TWO_BIT = 20;
    THREE_BIT = 30;
    FIVE_BIT = 40;
}

message BetBody {
    repeated int32 bets = 1;
}

message TakeRewardInput {
    int64 lottery_id = 1;
}

message GetPeriodsInput {
    int64 start_period_number = 1;
    int32 limit = 2;
}

message GetPeriodsOutput {
    repeated PeriodDetail periods = 1;
}

message GetLotteriesInput {
     int32 offset = 1;
     int32 limit = 2;
}

message GetLotteriesOutput {
    repeated LotteryDetail lotteries = 1;
}

message GetLotteryInput {
    int64 lottery_id = 1;
}

message GetLotteryOutput {
    LotteryDetail lottery = 1;
}

message GetRateOutput{
    int32 rate = 1;
    int32 decimals = 2;
}

message GetRewardsOutput{
    repeated RewardDetail rewards = 1;
}

message Reward{
    LotteryType type = 1;
    int64 amount = 2;
}

message RewardDetail{
    int32 type = 1;
    int64 amount = 2;
}

message PeriodBody {
     int64 period_number = 1;
     int64 block_number = 2;
     int64 draw_block_number = 3;
     aelf.Hash random_hash =4;
     int32 lucky_number = 5;
     google.protobuf.Timestamp create_time = 6;
     google.protobuf.Timestamp draw_time = 7;
}

message PeriodDetail {
    int64 period_number = 1;
    int64 block_number = 2;
    int64 draw_block_number = 3;
    aelf.Hash random_hash =4;
    int32 lucky_number = 5;
    google.protobuf.Timestamp create_time = 6;
    google.protobuf.Timestamp draw_time = 7;
    int64 start_period_number_of_day = 8;
}

message Lottery {              
    int64 id = 1;
    aelf.Address owner = 2;
    int64 period_number = 3;
    LotteryType type = 4;
    int64 price = 5;
    repeated BetBody bet_infos = 6;
    bool cashed = 7;
    aelf.Address seller = 8;
    int64 bonus = 9;
    int64 reward = 10;
    int64 block_number = 11;
    google.protobuf.Timestamp create_time = 12;
    bool expired = 13;
}

message LotteryDetail{
    int64 id = 1;
    int64 period_number = 2;
    int32 type = 3;
    int64 price = 4;
    repeated BetBody bet_infos = 5;
    bool cashed = 6;
    int64 reward = 7;
    int64 block_number = 8;
    google.protobuf.Timestamp create_time = 9;
    bool expired = 10;
    int64 start_period_number_of_day = 11;
}

message GetLatestCashedLotteryOutput{
    aelf.Address address = 1;
    int64 period_number = 2;
    int32 type = 3;
    int64 start_period_number_of_day = 4;
}

message LotteryList {
    repeated int64 ids = 1;
}